fix: print layout on safari

--- a/public/print.css
+++ b/public/print.css
@@ -20,7 +20,7 @@ html {
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (display: flow-root) {
     html {
-      margin: 0.5in;
+      margin: 0.5in 0in;
     }
     .page-break {
       padding-top: 0.5in;
